--- a/rtrpc_graph/Cargo.toml
+++ b/rtrpc_graph/Cargo.toml
@@ -1,11 +1,7 @@
 [package]
-name = "rtrpc"
+name = "rtrpc_graph"
 version = "0.0.0"
 authors = ["Ben Pig Chu <benpichu@gmail.com>"]
 edition = "2018"
 
-[workspace]
-members = ["rtrpc_graph"]
-
 [dependencies]
-rtrpc_graph = { path = "rtrpc_graph" }
