--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Ben Pig Chu <benpichu@gmail.com>"]
 edition = "2018"
 
 [workspace]
-members = ["rtrpc_graph"]
+members = ["rtrpc_common"]
 
 [dependencies]
 futures = "0.1"
 tokio = "0.1"
 tokio-io = "0.1"
 tokio-core = "0.1"
-rtrpc_graph = { path = "rtrpc_graph" }
+rtrpc_common = { path = "rtrpc_common" }
