--- a/rtrpc_common/Cargo.toml
+++ b/rtrpc_common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rtrpc_graph"
+name = "rtrpc_common"
 version = "0.0.0"
 authors = ["Ben Pig Chu <benpichu@gmail.com>"]
 edition = "2018"
